03-qa/evidence/run-B/tc009-retrieve/objects/VS_Holiday__c/VS_Holiday__c.object-meta.xml
<CustomObject>
    <description>F-001 slot-booking-core (VS-01, EP-01). Per-facility closure dates read by VS-06 slot generation (REQ-009); a session flagged VS_Is_Drive_Day__c overrides a closure for that facility+date only (D-018). OWD Public Read Only (design §2.2). Retention class (Annexure C4): permanent reference — never purged by VS_RetentionPurgeBatch.</description>
    <label>VS Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VS Holidays</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>