03-qa/evidence/run-B/tc009-retrieve/objects/VS_Holiday__c/fields/VS_Description__c.field-meta.xml
<CustomField>
    <fullName>VS_Description__c</fullName>
    <description>Plain-language reason for the closure (e.g. &quot;Republic Day&quot;, &quot;Facility maintenance&quot;), staff-maintained (OQ-015 default), shown to staff when planning sessions.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>