03-qa/evidence/run-B/tc009-retrieve/objects/VS_Holiday__c/fields/VS_Facility__c.field-meta.xml
<CustomField>
    <fullName>VS_Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup (not Master-Detail) to VS_Facility__c — holidays are reference data queried during slot generation, not owned/cascading children of the facility (design §2.4).</description>
    <label>Facility</label>
    <referenceTo>VS_Facility__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>VS_Holidays</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>