03-qa/evidence/run-B/tc009-retrieve/objects/VS_Holiday__c/fields/VS_Holiday_Date__c.field-meta.xml
<CustomField>
    <fullName>VS_Holiday_Date__c</fullName>
    <description>Date this facility is closed for booking. VS-06 slot generation skips this facility+date unless a session on that date is flagged VS_Is_Drive_Day__c = true (D-018).</description>
    <label>Holiday Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>